--- a/css/dolphin.css
+++ b/css/dolphin.css
@@ -21,7 +21,7 @@ html {
 /* Write your solution here */
 
 @media only screen and (min-width: 406px) and (max-width: 1090px) {
-  #monkey {
+  #dolphin {
     top: 0;
   }
 }
