--- a/css/dolphin.css
+++ b/css/dolphin.css
@@ -23,5 +23,6 @@ html {
 @media only screen and (min-width: 600px) and (max-width: 1090px) {
   #dolphin {
     top: 0;
+    transform: rotate(0.5turn);
   }
 }
